crates/icydb-core/tests/ui/db/contracts_module_private.stderr
error[E0603]: module `contracts` is private
 --> tests/ui/db/contracts_module_private.rs:1:21
  |
1 | use icydb_core::db::contracts::canonical_value_compare;
  |                     ^^^^^^^^^ private module
  |
note: the module `contracts` is defined here
 --> src/db/mod.rs
  |
  | pub(crate) mod contracts;
  | ^^^^^^^^^^^^^^^^^^^^^^^^
